tests/ui/regions/regions-implied-bounds-projection-gap-hr-1.stderr
error[E0277]: the trait bound `for<'z> T: Trait2<'y, 'z>` is not satisfied
  --> $DIR/regions-implied-bounds-projection-gap-hr-1.rs:21:49
   |
LL | fn callee<'x, 'y, T>(t: &'x dyn for<'z> Trait1< <T as Trait2<'y, 'z>>::Foo >)
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `for<'z> Trait2<'y, 'z>` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | fn callee<'x, 'y, T: for<'z> Trait2<'y, 'z>>(t: &'x dyn for<'z> Trait1< <T as Trait2<'y, 'z>>::Foo >)
   |                    ++++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
